--- a/tf_CNN.ipynb
+++ b/tf_CNN.ipynb
@@ -106,10 +106,10 @@
     "    \n",
     "    x = tf.reshape(x, shape = [-1,28,28,1])\n",
     "    \n",
-    "    conv1 = conv2d(x, Weights['W_conv1'])\n",
+    "    conv1 = tf.nn.relu(conv2d(x, Weights['W_conv1'])+biases['b_conv1'])\n",
     "    conv1 = maxpool2d(conv1)\n",
     "    \n",
-    "    conv2 = conv2d(conv1, Weights['W_conv2'])\n",
+    "    conv2 = tf.nn.relu(conv2d(conv1, Weights['W_conv2'])+biases['b_conv2'])\n",
     "    conv2 = maxpool2d(conv2)\n",
     "    \n",
     "    fc = tf.reshape(conv2, [-1, 7*7*64])\n",
